Some package tidying